# u4-cht-python

./: .ai_rules.md  .git-commit-msg.tmp  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/xu4/doc/: modular_brainstorming.txt
docs/ai_planning/: A1-notes.md  PLAN.md  phase_a1_emscripten_spike.md
scripts/web/: build_boron.sh  build_xu4.sh  m1_hello.c
scripts/web/patches/: apply_xu4_patches.sh  gpu_stub.cpp  sdl_compat.cpp  sound_stub.cpp
src/u4cht/: __init__.py  cli.py
src/u4cht/bootstrap/: __init__.py  fetch_data.py
src/u4cht/extract/: __init__.py  hardcoded.py  strings.py  tlk.py  vendor.py
src/u4cht/game/: __init__.py
src/u4cht/web/: __init__.py
tests/: test_bootstrap_fetch_data.py  test_cli_extract_tlk.py  test_cli_smoke.py  test_extract_hardcoded_golden.py  test_extract_hardcoded_unit.py  test_extract_strings.py  test_extract_strings_golden.py  test_extract_tlk_golden.py  test_extract_tlk_unit.py  test_extract_vendor_golden.py  test_extract_vendor_unit.py
