[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "u4cht"
version = "0.1.0.dev0"
description = "Ultima IV 繁體中文化 — Python 工具鏈（姊妹於 u4-cht）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "L.CY (anr2)" }]
keywords = ["ultima4", "xu4", "localization", "chinese", "traditional-chinese"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Natural Language :: Chinese (Traditional)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Software Development :: Localization",
]
dependencies = [
    "Pillow>=10.0",           # 影像 / atlas / tileset render
    "click>=8.1",             # CLI
    "rich>=13.0",             # log / table 輸出
]

[project.optional-dependencies]
fonts = ["fonttools>=4.50"]   # 讀 TTF、抽 subset
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
u4cht = "u4cht.cli:main"

[project.urls]
"Upstream (C++/xu4)" = "https://github.com/wicanr2/u4-cht"
"xu4 engine" = "https://github.com/xu4-engine/u4"

[tool.hatch.build.targets.wheel]
packages = ["src/u4cht"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# RUF001/002/003 對全形中文標點誤報（中文文檔本來就用「，。：；（）」）
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
